# food-menu

./: .gitignore  FINAL_SIMPLIFIED_ARCHITECTURE.md  FIXES_APPLIED.md  FIX_API_KEY_ISSUE.md  FIX_FINAL_MENU_GENERATION.md  FIX_ITERATION_LOOP.md  FIX_SHORT_FINAL_ANSWER.md  NEW_ARCHITECTURE.md  QUICKSTART.md  README.md  YOUTUBE_DESCRIPTION.md  actions.py  decision.py  example2.py  main.py  memory.py  models.py  perception.py  pyproject.toml  requirements.txt  talk2mcp.py  test_mcp.py
